Actual state of the art

--- a/Abgaben/titlepage.tex
+++ b/Abgaben/titlepage.tex
@@ -1,5 +1,5 @@
 \begin{titlepage}
-
+%was wird abgegeben: Relationenmodell
     \begin{center}
 
         %\includegraphics[width=0.8\textwidth]{img/header.png}\\
@@ -19,11 +19,11 @@
         \vspace{\fill}
         \Large{\textbf{Lukas Hempel~\&~Thomas Pause}} %~~ \Large{Matrikelnummer: 3720245}
         ~\\
-        \Large{Matrikelnummern: 0000000~\&~3720245}
+        \Large{Matrikelnummern: 3739268~\&~3720245}
 
         \Large{Bachelor Informatik}
         ~\\
-        \Large{Betreuer: bla}
+        \Large{Betreuer: Martin Franke}
         \vspace{\fill}
 
     \end{center}
