--- a/Abgaben/abgabe1.tex
+++ b/Abgaben/abgabe1.tex
@@ -4,10 +4,234 @@
 
 \input{titlepage}
 
+\section*{Relationenmodell}
+Legende:
+\begin{itemize}
+  \item \primary{primary key}
+  \item \foreign{foreign key}
+  \item \both{foreign as primary key}
+\end{itemize}
 
-~Test Underlining:\\
-\uline{einfach}\\
-\uuline{doppelt}\\
-$\dotuline{\uline{\textnormal{doppelt gepunktet}}}$\\
+Tabellen:
+%\begin{spacing}{1.5}
+\begin{itemize}
+  \item \emph{Tag} (\primary{id}, name);
+  \item \emph{TagClass} (\primary{id}, name);
+  \item \emph{Continent} (\primary{id}, name);
+  \item \emph{Country} (\primary{id}, name, \foreign{continent\_id});
+  \item \emph{City} (\primary{id}, name, \foreign{country\_id});
+  \item \emph{Person} (\primary{id}, firstName, lastName, gender, birthday, email, speaks, browserUsed, locationIP, \foreign{city\_id});
+  \item \emph{Company} (\primary{id}, name, \foreign{country\_id});
+  \item \emph{University} (\primary{id}, name, \foreign{city\_id});
+  \item \emph{Forum} (\primary{id}, title, creationDate, moderator);
+  \item \emph{Post} (\primary{id}, language, imageFile, creationDate, browserUsed, locationIP, content, length, \foreign{forum\_id}, \foreign{author\_id}, \foreign{country\_id});
+  \item \emph{Comment} (\primary{id}, creationDate, browserUsed, locationIP, content, length, author\_id, country\_id, reply\_to\_post\_id, reply\_to\_comment\_id);
+  \item \emph{Forum\_hasMember\_Person} (\both{person\_id}, \both{forum\_id}, joinDate);
+  \item \emph{Forum\_hasTag\_Tag} (\both{forum\_id}, \both{tag\_id});
+  \item \emph{Tag\_hasType\_TagClass} (\both{tag\_id}, \both{tagClass\_id});
+  \item \emph{TagClass\_isSubclassOf\_TagClass} (\both{tag\_parent\_id}, \both{tag\_child\_id});
+  \item \emph{Post\_hasTag\_Tag} (\both{post\_id}, \both{tag\_id});
+  \item \emph{Comment\_hasTag\_Tag} (\both{comment\_id}, \both{tag\_id});
+  \item \emph{Person\_knows\_Person} (\both{person\_1\_id}, \both{person\_2\_id}, creationDate);
+  \item \emph{Person\_studyAt\_University} (\both{person\_id}, \both{university\_id}, classYear);
+  \item \emph{Person\_workAt\_Company} (\both{person\_id}, \both{company\_id}, workFrom);
+  \item \emph{Person\_likes\_Post} (\both{person\_id}, \both{post\_id}, creationDate);
+  \item \emph{Person\_likes\_Comment} (\both{person\_id}, \both{comment\_id}, creationDate);
+  \item \emph{Person\_hasInterest\_Tag} (\both{person\_id}, \both{tag\_id});
+\end{itemize}
+%\end{spacing}
+\section*{Check-Constraints}
+~
 
+\section*{Tabellen als SQL-Datei}
+\begin{lstlisting}[language=sql]
+CREATE FUNCTION valid_email(b boolean, v VARCHAR)
+    RETURNS boolean
+    AS $$
+    SELECT $2 ~ '^[\w\.]+@[\w+\.]+\.[\w]{2,4}$' as result $$
+    LANGUAGE sql;
+
+CREATE OPERATOR =%= (
+    PROCEDURE = valid_email,
+    LEFTARG = boolean,
+    RIGHTARG = varchar
+);
+
+create table tag(
+    id BIGSERIAL PRIMARY KEY,
+    name VARCHAR(150) NOT NULL
+);
+
+create table tagclass(
+    id BIGSERIAL PRIMARY KEY,
+    name VARCHAR(150) NOT NULL
+);
+
+create table continent(
+    id BIGSERIAL PRIMARY KEY,
+    name VARCHAR(100) NOT NULL,
+    url TEXT
+);
+
+create table country(
+    id BIGSERIAL PRIMARY KEY,
+    name VARCHAR(100) NOT NULL,
+    continent_id BIGINT NOT NULL REFERENCES continent(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    url TEXT
+);
+
+create table city(
+    id BIGSERIAL PRIMARY KEY,
+    name VARCHAR(100) NOT NULL,
+    country_id BIGINT NOT NULL REFERENCES country(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    url TEXT
+);
+
+create table person(
+    id BIGSERIAL PRIMARY KEY,
+    creationDate TIMESTAMP NOT NULL,
+    firstName VARCHAR(50) NOT NULL,
+    lastName VARCHAR(100) NOT NULL,
+    gender VARCHAR(7) NOT NULL,
+    birthday Date NOT NULL,
+    email VARCHAR[] NOT NULL, -- ArrayType bc [1..*]
+    speaks VARCHAR[] NOT NULL, -- ArrayType bc [1..*]
+    browserUsed VARCHAR(50) NOT NULL,
+    locationIP VARCHAR(40) NOT NULL,
+    city_id BIGINT NOT NULL REFERENCES city(id) ON DELETE CASCADE ON UPDATE CASCADE,
+
+    CONSTRAINT birthday_not_in_future CHECK (birthday <= NOW()::DATE),
+    CONSTRAINT vaild_email CHECK (TRUE =%= ALL(email))
+);
+
+create table company(
+    id BIGSERIAL PRIMARY KEY,
+    name VARCHAR(200) NOT NULL,
+    country_id BIGINT NOT NULL REFERENCES country(id) ON DELETE CASCADE ON UPDATE CASCADE
+);
+
+create table university(
+    id BIGSERIAL PRIMARY KEY,
+    name VARCHAR(200) NOT NULL,
+    city_id BIGINT NOT NULL REFERENCES city(id) ON DELETE CASCADE ON UPDATE CASCADE
+);
+
+create table forum(
+    id BIGSERIAL PRIMARY KEY,
+    title VARCHAR(200) NOT NULL,
+    creationDate TIMESTAMP NOT NULL,
+    moderator BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    UNIQUE (moderator) -- eine Person kann nur in einem oder keinem Forum Moderator sein
+);
+
+create table post(
+    id BIGSERIAL PRIMARY KEY,
+    language VARCHAR(2), -- Achtung, hier soll Null erlaubt sein
+    imageFile VARCHAR(150), -- Achtung, hier soll Null erlaubt sein
+    creationDate TIMESTAMP NOT NULL,
+    browserUsed VARCHAR(50) NOT NULL,
+    locationIP VARCHAR(40) NOT NULL,
+    content TEXT, -- Achtung, hier soll Null erlaubt sein
+    length INT NOT NULL,
+    forum_id BIGINT NOT NULL REFERENCES forum(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    author_id BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    country_id BIGINT NOT NULL REFERENCES country(id) ON DELETE CASCADE ON UPDATE CASCADE
+);
+
+create table comment(
+    id BIGSERIAL PRIMARY KEY,
+    creationDate TIMESTAMP NOT NULL,
+    browserUsed VARCHAR(50) NOT NULL,
+    locationIP VARCHAR(40) NOT NULL,
+    content TEXT, -- Achtung, hier soll Null erlaubt sein
+    length INT NOT NULL,
+    author_id BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    country_id BIGINT NOT NULL REFERENCES country(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    reply_to_post_id BIGINT REFERENCES post(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    reply_to_comment_id BIGINT REFERENCES comment(id) ON DELETE CASCADE ON UPDATE CASCADE,
+
+    CONSTRAINT belongs_to_message_or_post CHECK (((reply_to_comment_id IS NOT NULL) AND (reply_to_post_id IS NULL)) OR ((reply_to_comment_id IS NULL) AND (reply_to_post_id IS NOT NULL))) -- noch schauen ob das so geht, besser XOR!
+);
+
+create table forum_hasMember_person(
+    person_id BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    forum_id BIGINT NOT NULL REFERENCES forum(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    joinDate TIMESTAMP NOT NULL,
+    PRIMARY KEY (person_id, forum_id)
+);
+
+create table forum_hasTag_tag(
+    forum_id BIGINT NOT NULL REFERENCES forum(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    tag_id BIGINT NOT NULL REFERENCES tag(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    PRIMARY KEY (forum_id, tag_id)
+);
+
+create table tag_hasType_tagclass(
+    tag_id BIGINT NOT NULL REFERENCES tag(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    tagclass_id BIGINT NOT NULL REFERENCES tagclass(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    PRIMARY KEY (tag_id, tagclass_id)
+);
+
+create table tagclass_isSubclassOf_tagclass(
+    tag_parent_id BIGINT NOT NULL REFERENCES tag(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    tag_child_id BIGINT NOT NULL REFERENCES tag(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    PRIMARY KEY (tag_parent_id, tag_child_id)
+);
+
+create table post_hasTag_tag(
+    post_id BIGINT NOT NULL REFERENCES post(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    tag_id BIGINT NOT NULL REFERENCES tag(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    PRIMARY KEY (post_id, tag_id)
+);
+
+create table comment_hasTag_tag(
+    comment_id BIGINT NOT NULL REFERENCES comment(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    tag_id BIGINT NOT NULL REFERENCES tag(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    PRIMARY KEY (comment_id, tag_id)
+);
+
+create table person_knows_person(
+    person_1_id BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    person_2_id BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    creationDate TIMESTAMP NOT NULL,
+    PRIMARY KEY (person_1_id, person_2_id)
+);
+
+create table person_studyAt_university(
+    person_id BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    university_id BIGINT NOT NULL REFERENCES university(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    classYear INT NOT NULL,
+    PRIMARY KEY (person_id, university_id)
+);
+
+create table person_workAt_company(
+    person_id BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    company_id BIGINT NOT NULL REFERENCES company(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    workFrom INT NOT NULL,
+    PRIMARY KEY (person_id, company_id)
+);
+
+create table person_likes_post(
+    person_id BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    post_id BIGINT NOT NULL REFERENCES post(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    creationDate TIMESTAMP NOT NULL,
+    PRIMARY KEY (person_id, post_id)
+);
+
+create table person_likes_comment(
+    person_id BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    comment_id BIGINT NOT NULL REFERENCES comment(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    creationDate TIMESTAMP NOT NULL,
+    PRIMARY KEY (person_id, comment_id)
+);
+
+create table person_hasInterest_Tag(
+    person_id BIGINT NOT NULL REFERENCES person(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    tag_id BIGINT NOT NULL REFERENCES tag(id) ON DELETE CASCADE ON UPDATE CASCADE,
+    PRIMARY KEY (person_id, tag_id)
+);
+\end{lstlisting}
+
+\section*{UML-Diagramm}
+~
 \end{document}
