--- a/Abgaben/preamble.tex
+++ b/Abgaben/preamble.tex
@@ -7,12 +7,12 @@
 \usepackage{comment}
 \usepackage{appendix}
 \usepackage{caption, subcaption}
-\usepackage[T1]{fontenc} % makes the pipe character usable in regular text #AK
+\usepackage[T1]{fontenc}
 \usepackage{multirow}
 
 \usepackage{pdfpages}
 % für Unterstreichungen
-\usepackage{ulem}
+\usepackage[normalem]{ulem}
 %\usepackage{environ}
 \usepackage{fancyhdr}
 % \usepackage[
@@ -37,6 +37,7 @@
 
 \usepackage{tabularx}
 \usepackage{hyperref}
+\usepackage{setspace}
 
 \pagestyle{fancy}
 \setlength{\headheight}{16pt}
@@ -46,3 +47,34 @@
 \cfoot{\thepage}
 \setlength{\parindent}{0pt}
 %\addbibresource{bibliography.bib}
+
+\newcommand{\primary}[1]{$\uline{\texttt{#1}}$}
+\newcommand{\foreign}[1]{$\dashuline{\smash{\texttt{#1}}}$}
+\newcommand{\both}[1]{$\dashuline{\uline{\texttt{#1}}}$}
+
+%for sql syntax
+\usepackage{listings}
+\lstset{
+    numberbychapter=false,
+    numbers=none,
+    float=htb,
+    numberblanklines=true,%specified even when numbers=none here for the case that numbers are explicitly activated for a single listing
+    %numbers=left,
+    %numberstyle=\tiny,
+    %basicstyle=\ttfamily\fontsize{11}{11}\selectfont,
+    basicstyle=\normalfont\ttfamily,
+    tabsize=2,
+    framexleftmargin=2pt,
+    captionpos=b,
+    frame=single,
+    breaklines=true,
+    %keywordstyle=\color{cyan}, % screen version
+    keywordstyle=\color{blue}, % print version
+    %stringstyle=\color{listkeyword}, % print version % does not seem to work correctly
+    aboveskip=1.5em
+}
+\lstset{language=sql,breaklines=true}
+\lstdefinelanguage{sql}{
+sensitive=true,
+morekeywords={create, table, select, SELECT,DISTINCT,SAMPLE, FROM ,WHERE,FILTER,ORDER, GROUP, BY,HAVING,IN,AS,GRAPH,SERVICE,PREFIX,ASC,DESC,LIMIT,SUM,MIN,MAX}
+}
