--- a/Abgaben/preamble.tex
+++ b/Abgaben/preamble.tex
@@ -66,7 +66,7 @@
     tabsize=2,
     framexleftmargin=2pt,
     captionpos=b,
-    frame=single,
+    %frame=single,
     breaklines=true,
     %keywordstyle=\color{cyan}, % screen version
     keywordstyle=\color{blue}, % print version
@@ -76,5 +76,5 @@
 \lstset{language=sql,breaklines=true}
 \lstdefinelanguage{sql}{
 sensitive=true,
-morekeywords={create, table, select, SELECT,DISTINCT,SAMPLE, FROM ,WHERE,FILTER,ORDER, GROUP, BY,HAVING,IN,AS,GRAPH,SERVICE,PREFIX,ASC,DESC,LIMIT,SUM,MIN,MAX}
+morekeywords={TABLE, ON, UPDATE, DELETE, CREATE, OPERATOR, FUNCTION, SELECT,DISTINCT, FROM, WHERE, FILTER, ORDER, GROUP, BY, HAVING, IN, AS, GRAPH, SERVICE, PREFIX, ASC, DESC, LIMIT, SUM, MIN, MAX}
 }
