--- a/Abgaben/preamble.tex
+++ b/Abgaben/preamble.tex
@@ -76,5 +76,5 @@
 \lstset{language=sql,breaklines=true}
 \lstdefinelanguage{sql}{
 sensitive=true,
-morekeywords={TABLE, ON, UPDATE, DELETE, CREATE, OPERATOR, FUNCTION, SELECT,DISTINCT, FROM, WHERE, FILTER, ORDER, GROUP, BY, HAVING, IN, AS, GRAPH, SERVICE, PREFIX, ASC, DESC, LIMIT, SUM, MIN, MAX}
+morekeywords={TABLE, ON, UPDATE, DELETE, CREATE, OPERATOR, FUNCTION, SELECT,DISTINCT, FROM, WHERE, FILTER, ORDER, GROUP, BY, HAVING, IN, AS, CONSTRAINT, GRAPH, SERVICE, PREFIX, ASC, DESC, LIMIT, SUM, MIN, MAX}
 }
